src/objects/Mission__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Post_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you want to allow the user the option to post to chatter, or not, check this box</description>
        <label>Chatter Post Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Point_Value__c</fullName>
        <description>Calculates the current value of the mission with a time-decay algorithm from the point the mission was started. The minimum value for any mission is 10% of the max points.</description>
        <formula>if( ( now()-Mission_Start_Time__c )*1440 &lt; 60, 
	1*Max_Point_Value__c, 
	if( ( now()-Mission_Start_Time__c )*1440 &lt; 120, 
		0.9*Max_Point_Value__c, 
		if( ( now()-Mission_Start_Time__c )*1440 &lt; 240, 
			0.75* Max_Point_Value__c, 
			if( ( now()-Mission_Start_Time__c )*1440 &lt; 480, 
				0.6* Max_Point_Value__c, 
				if( ( now()-Mission_Start_Time__c )*1440 &lt; 960, 
					0.5* Max_Point_Value__c, 
					if( ( now()-Mission_Start_Time__c )*1440 &lt; 1440, 
						0.25* Max_Point_Value__c, 
						0.1* Max_Point_Value__c 
					)
				)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Point Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Missions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_of_Duration__c</fullName>
        <formula>FLOOR(Mission_End_Time__c - Mission_Start_Time__c)*24+FLOOR(((Mission_End_Time__c - Mission_Start_Time__c) - FLOOR(Mission_End_Time__c - Mission_Start_Time__c)) * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours of Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Point_Value__c</fullName>
        <label>Max Point Value</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_End_Time__c</fullName>
        <inlineHelpText>Optional end time for missions. Applies to all types. If null then mission end time is equivalent to game end time.</inlineHelpText>
        <label>Mission End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mission_Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Mission Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mission_Type__c</fullName>
        <label>Mission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_User_Validation_Code__c</fullName>
        <label>Non User Validation Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Time_Remaining__c</fullName>
        <formula>FLOOR(Mission_End_Time__c - now())*24+FLOOR(((Mission_End_Time__c - now()) - FLOOR(Mission_End_Time__c - now())) * 24)/Hours_of_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent_Time_Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Place</label>
        <referenceTo>Place__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Hunt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify a user who you want to mention in a post of the hunt item</description>
        <label>Target User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hunt_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <formula>IF( NOW() &lt; Mission_Start_Time__c,&quot;The Mission has not started&quot;, 
TEXT(FLOOR(Mission_End_Time__c - now())) &amp; &quot; Days: &quot; &amp; 
TEXT(FLOOR(((Mission_End_Time__c - now()) - FLOOR(Mission_End_Time__c - now())) * 24)) &amp; &quot; Hrs: &quot; &amp; 
IF( 
FLOOR(Mission_End_Time__c - now()) &gt; 0, 
TEXT(ROUND((((MOD(((Mission_End_Time__c - now()) - (FLOOR(Mission_End_Time__c - now()))) , (FLOOR(Mission_End_Time__c - now()))) * 24) - (FLOOR(((Mission_End_Time__c - now()) - (FLOOR(Mission_End_Time__c - now()))) * 24))) * 60),0)) &amp; &quot; Mins&quot;, 
TEXT(ROUND((((MOD(((Mission_End_Time__c - now()) - (FLOOR(Mission_End_Time__c - now()))) , 1) * 24) - (FLOOR(((Mission_End_Time__c - now()) - (FLOOR(Mission_End_Time__c - now()))) * 24))) * 60),0)) &amp; &quot; Mins&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining</label>
        <type>Text</type>
    </fields>
    <label>Mission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mission_End_Time__c</columns>
        <columns>Mission_Start_Time__c</columns>
        <columns>Hours_of_Duration__c</columns>
        <columns>Percent_Time_Remaining__c</columns>
        <columns>Time_Remaining__c</columns>
        <columns>Max_Point_Value__c</columns>
        <columns>Current_Point_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MissionTypeCheckin</fullName>
        <active>true</active>
        <description>Enforces that missions of type check-in have are associated to a place.</description>
        <errorConditionFormula>AND( ISPICKVAL(Mission_Type__c, &apos;Check-in&apos;) ,  ISBLANK(Place__c))</errorConditionFormula>
        <errorDisplayField>Place__c</errorDisplayField>
        <errorMessage>Place is required for check-in missions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MissionTypeScannerOrSignature</fullName>
        <active>true</active>
        <description>Enforces missions of type scanner or signature are associated to a target user.</description>
        <errorConditionFormula>IF(
	OR(ISPICKVAL(Mission_Type__c, &apos;Scanner&apos;),ISPICKVAL(Mission_Type__c, &apos;Signature&apos;)),
	AND(ISBLANK(Target_User__c),ISBLANK(Non_User_Validation_Code__c)),
	false
)</errorConditionFormula>
        <errorDisplayField>Target_User__c</errorDisplayField>
        <errorMessage>Target User is required for Signature missions.
Target User OR Non User Validation Code is required for Scanner missions.</errorMessage>
    </validationRules>
</CustomObject>